--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,43 @@ a:focus {
   color: #096395;
   text-decoration: underline;
 }
+
+.button {
+  display: inline-block;
+  background-color: #030303;
+  color: #ffffff; /* needed to override the default link color - NOT WORKING!!!*/
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;/* identical to box height */
+  text-transform: uppercase;
+  padding: 11px 142px;
+  gap: 4px;
+  border-radius: 4px;
+}
+
+.button:hover {
+  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+  text-decoration: none;
+}
+.button:active {
+  opacity: 0.8;
+  text-decoration: none;
+}
+
+.button.email {
+  background-color: transparent;
+  color: #030303;
+  text-transform: uppercase;
+  border: 4px solid #030303;
+}
+
+.button.email:hover {
+  background-color: #2B2B2B;
+  color: #ffffff;
+  border-color: #2B2B2B
+}
+.button.email:active {
+  background-color: #2B2B2B;
+  color: #ffffff;
+  border-color: #2B2B2B
+}
