--- a/css/style.css
+++ b/css/style.css
@@ -15,31 +15,55 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 1.4;
   /* or 133% */
-
   letter-spacing: 0.04em;
-
   /* #2B2B2B */
-
   color: #2B2B2B;
 }
 
-h1 {
+h1, h2, h3 {
   font-family: 'Oswald';
-  font-style: normal;
   font-weight: 500;
-  font-size: 32px;
-  line-height: 47px;
+}
+
+h1, h2 {
+  font-size: 1.7em;
+  line-height: 1.3;
   text-transform: uppercase;
 }
 
-h2 {
-  font-family: 'Oswald';
-  font-style: normal;
+h3 {
+  font-size: 1.3em;
+  line-height: 0.5;
+}
+
+.welcome h1 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 2.2em;
   font-weight: 500;
-  font-size: 24px;
-  line-height: 36px;
+  color: ##030303;
+  text-transform: none;
+}
+
+.welcome p {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  color: #030303;
+}
+
+.spar h3 {
+  text-transform: uppercase;
+}
+
+.spar span, .amuseum span {
+  font-style: italic;
+  color: #6A6A6A;
+}
+
+.project h2 {
+  font-size: 1.3em;
+  text-transform: none;
 }
 
 img {
@@ -48,64 +72,59 @@ img {
 
 a {
   color: #0389D4;
-  text-decoration: none; /* No underlining */
 }
 
 a:visited { /* visited link */
-  color: #053D5B;
-}
-
-a:hover {
-  color: #096395;
-  text-decoration: underline; /* Underlining when hovering over a link */
-}
-
-a:active { /* selected link */
-  color: #053D5B;
+  color: #0389D4;
 }
 
 a:hover,
 a:focus {
   color: #096395;
-  text-decoration: underline;
+  text-decoration: none;
 }
+
+a:active { /* selected link */
+  color: #096395;
+}
+
+
 
 .button {
   display: inline-block;
   background-color: #030303;
-  color: #ffffff; /* needed to override the default link color - NOT WORKING!!!*/
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 23px;/* identical to box height */
+  color: #FFFFFF; /* needed to override the default link color */
   text-transform: uppercase;
-  padding: 11px 142px;
-  gap: 4px;
+  padding: 11px 44px;
   border-radius: 4px;
+  text-decoration: none;
 }
 
 .button:hover {
   opacity: 0.8; /* Reduces the opacity of the button to 80% */
-  text-decoration: none;
+  color: #FFFFFF;
 }
 .button:active {
   opacity: 0.8;
-  text-decoration: none;
 }
 
 .button.email {
   background-color: transparent;
   color: #030303;
   text-transform: uppercase;
-  border: 4px solid #030303;
+  border: 2px solid #030303;
 }
 
-.button.email:hover {
+.button.email:hover, .button.email:active {
   background-color: #2B2B2B;
   color: #ffffff;
-  border-color: #2B2B2B
+  border-color: #2B2B2B;
 }
-.button.email:active {
-  background-color: #2B2B2B;
-  color: #ffffff;
-  border-color: #2B2B2B
+
+hr {
+  border: none;
+    height: 1px;
+    /* Set the hr color */
+    color: #6A6A6A; /* old IE */
+    background-color: #6A6A6A;
 }
