--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@ Tetriary Color (Gray): #6A6A6A;
 Background Color (Gray): #E1E1E1;
 Hyperlink Color (Blue): #0389D4
 */
+header {
+  background-color: #ff44c4;
+  padding: 10px;
+  margin: 10px;
+  border-bottom: 3px solid #4a4a4a;
+}
 
 body {
   background-color: #E1E1E1;
@@ -20,10 +26,12 @@ body {
   letter-spacing: 0.04em;
   /* #2B2B2B */
   color: #2B2B2B;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 h1, h2, h3 {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-weight: 500;
 }
 
@@ -39,17 +47,20 @@ h3 {
 }
 
 .welcome h1 {
-  font-family: 'Oswald', sans-serif;
   font-size: 2.2em;
-  font-weight: 500;
   color: ##030303;
   text-transform: none;
+  padding-top: 64px;
 }
 
 .welcome p {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   color: #030303;
+}
+
+.work h2 {
+  padding-top: 140px;
 }
 
 .spar h3 {
@@ -59,6 +70,10 @@ h3 {
 .spar span, .amuseum span {
   font-style: italic;
   color: #6A6A6A;
+}
+
+.spar, .amuseum {
+  padding-bottom: 100px;
 }
 
 .project h2 {
