--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ Background Color (Gray): #E1E1E1;
 Hyperlink Color (Blue): #0389D4
 */
 header {
-  background-color: #ff44c4;
-  padding: 10px;
-  margin: 10px;
-  border-bottom: 3px solid #4a4a4a;
+  background-color: #E1E1E1;
+  position: fixed;
+  box-shadow: 0px 5px 12px 0px rgba(50, 50, 50, 0.3);
+  width: 100%;
 }
 
 body {
@@ -26,8 +26,6 @@ body {
   letter-spacing: 0.04em;
   /* #2B2B2B */
   color: #2B2B2B;
-  margin-left: 24px;
-  margin-right: 24px;
 }
 
 h1, h2, h3 {
@@ -50,17 +48,12 @@ h3 {
   font-size: 2.2em;
   color: ##030303;
   text-transform: none;
-  padding-top: 64px;
 }
 
 .welcome p {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   color: #030303;
-}
-
-.work h2 {
-  padding-top: 140px;
 }
 
 .spar h3 {
@@ -72,10 +65,6 @@ h3 {
   color: #6A6A6A;
 }
 
-.spar, .amuseum {
-  padding-bottom: 100px;
-}
-
 .project h2 {
   font-size: 1.3em;
   text-transform: none;
@@ -83,6 +72,10 @@ h3 {
 
 img {
   width: 100%;
+}
+
+.container {
+  max-width: 1200px;
 }
 
 a {
@@ -102,8 +95,6 @@ a:focus {
 a:active { /* selected link */
   color: #096395;
 }
-
-
 
 .button {
   display: inline-block;
@@ -142,4 +133,56 @@ hr {
     /* Set the hr color */
     color: #6A6A6A; /* old IE */
     background-color: #6A6A6A;
+}
+
+/* Layout styling */
+.welcome {
+  padding-bottom: 64px;
+}
+
+.container {
+  padding: 0 15px;
+}
+
+.row {
+  margin-bottom: 48px;
+}
+
+.logo {
+  max-width: 250px;
+  text-align: center;
+  padding: 10px 0;
+}
+
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > li > a {
+  padding: 0 16px;
+  text-transform: none;
+  font-weight: 500;
+  color: #2B2B2B;
+}
+
+#hero {
+  background-color: #E1E1E1;
+  padding-top: 148px;
+  padding-bottom: 64px;
+  display: inline-block;
+  width: 100%;
+}
+
+.social {
+  margin: 48px 0;
+  display: inline-block;
+}
+
+.copyright {
+  text-align: center;
 }
