Update responsive styling & animation

--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,17 @@ Tetriary Color (Gray): #6A6A6A;
 Background Color (Gray): #E1E1E1;
 Hyperlink Color (Blue): #0389D4
 */
+* {
+  box-sizing: border-box;
+}
+
 header {
   background-color: #E1E1E1;
   position: fixed;
   box-shadow: 0px 5px 12px 0px rgba(50, 50, 50, 0.3);
   width: 100%;
   text-align: center;
-  padding: 16px 0;
+  padding: 24px 0 16px ;
 }
 
 body {
@@ -90,6 +94,8 @@ h3 {
 
 img {
   width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
@@ -122,6 +128,7 @@ a:active { /* selected link */
   padding: 11px 44px;
   border-radius: 4px;
   text-decoration: none;
+  transition: 0.2s opacity;
 }
 
 .button:hover {
@@ -236,10 +243,37 @@ iframe {
   width: 100%;
 }
 
+/*Animation*/
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
 @media only screen and (min-width: 640px) {
+  body {
+    font-size: 1.125em;
+  }
   header {
     text-align: unset;
   }
@@ -254,14 +288,11 @@ Medium devices (640px and larger)
   nav {
     margin-top: 0;
   }
-  body {
-    font-size: 1.125em;
-  }
   .col-md-6 {
     width: 50%;
   }
   [class*="col-"] {
-    float: left;
+    float:left;
     padding: 0 10px;
   }
   .row::after {
@@ -271,6 +302,9 @@ Medium devices (640px and larger)
 }
   .welcome span {
     display: block;
+  }
+  .about .introduction p {
+    margin-top: unset;
   }
   .competitors {
     flex-direction: row;
@@ -287,59 +321,24 @@ Medium devices (640px and larger)
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
-  header {
-    text-align: unset;
-  }
-  header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  header .logo {
-    max-width: 50%;
-  }
-  nav {
-    margin-top: 0;
-  }
-  body {
-    font-size: 1.125em;
-  }
-  .container {
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+  [class*="col-"] {
+    padding: 0 1em;
   }
   .col-lg-7 {
-    width: 58%;
+    width: 60%;
   }
   .col-lg-5 {
-    width: 42%;
+    width: 40%;
   }
-  [class*="col-"] {
-    float: left;
-    padding: 0 10px;
-  }
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-  .welcome span {
-    display: block;
-  }
-  .competitors {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .competitors picture {
-    max-width: 25%;
-    display: block;
-  }
-}
 
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
+}
+  .col-xl-8 {
+  width: 70%;
+}
+  .col-xl-4 {
+  width: 30%;
 }
