--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ nav>ul>li>a {
 .navtoggle.responsive li  {
   display: block;
   padding: 10px 0;
-  border-top: 1px solid rgba(255,127,80,0.5);
+  border-top: 1px solid rgb(106,106,106);
 }
 
 .navtoggle.responsive li:last-child  {
