--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a:active {
 a.button {
   display: inline-block;
   background-color: #030303;
-  color: #fff;
+  color: #ffffff;
 
   /* needed to override the default link color */
   text-transform: uppercase;
@@ -148,11 +148,11 @@ a.button:hover {
   opacity: 0.8;
 
   /* Reduces the opacity of the button to 80% */
-  color: #fff;
+  color: #ffffff;
 }
 
 a.button:visited {
-  color: #fff;
+  color: #ffffff;
 }
 
 a.button:active {
@@ -169,7 +169,7 @@ a.button:active {
 .button.email:hover,
 .button.email:active {
   background-color: #2b2b2b;
-  color: #fff;
+  color: #ffffff;
   border-color: #2b2b2b;
 }
 
@@ -449,7 +449,7 @@ Large devices (1024px or larger)
   .col-lg-5 {
     width: 50%;
   }
-  
+
   body {
     font-size: 1.5em;
   }
@@ -473,7 +473,8 @@ Large devices (1024px or larger)
   }
 }
 
-/* X-large devices (1440px or larger) */
-
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
 /* @media only screen and (min-width: 1440px) {
- */
+} */
